# clio

./: CMakeLists.txt  ConanPresets.json  conanfile.py  example-config.json  flake.nix  nix.patch
cmake/: BuildTypes.cmake  CheckCompiler.cmake  ClangTidy.cmake
src/app/: ClioApplication.cpp  ClioApplication.hpp
src/main/: Main.cpp
src/rpc/: Errors.cpp  Errors.hpp
src/rpc/common/: Validators.hpp
src/rpc/common/impl/: ValidatorsImpl.hpp
src/util/: SignalsHandler.cpp  SignalsHandler.hpp  SignalsHandlerInterface.hpp
src/util/prometheus/: Http.cpp  Prometheus.cpp  Prometheus.h
src/web/: IntervalSweepHandler.cpp  IntervalSweepHandler.hpp
src/web/impl/: ErrorHandling.hpp  WsBase.hpp
src/web/ng/: Connection.cpp  Connection.hpp  Response.cpp  Response.hpp
src/web/ng/impl/: WsConnection.hpp
tests/common/util/: MockSignalsHandler.hpp
tests/unit/: CMakeLists.txt  DOSGuardTests.cpp
tests/unit/web/: IntervalSweepHandlerTests.cpp  ServerTests.cpp
tests/unit/web/ng/: ResponseTests.cpp
unittests/: CMakeLists.txt
unittests/rpc/common/: ValidatorsTests.cpp
unittests/util/: MockPrometheus.h
unittests/util/prometheus/: HttpTests.cpp
unittests/web/: ServerTests.cpp
